refactor: 가독성 향상 및 DRY 원칙 준수를 위한 if문 나열 수정 및 UserRoles List -> String 메서드 User 엔티티 내부 메서드로 수정