@@ -13,7 +13,6 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Entity
 @Getter
@@ -84,6 +83,10 @@ public class User {
     public List<String> mapUserRolesToList() {
         return this.getRoles().stream()
                 .map(UserRoles::name)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public String mapRoleListToString() {
+        return String.join(",", this.mapUserRolesToList());
     }
 }
